--- a/views/all-characters.handlebars
+++ b/views/all-characters.handlebars
@@ -5,10 +5,10 @@
         <h1>All Characters</h1>
     </header>
     {{#if successMsg}}
-    <h2 class="alert alert-success">{{successMsg}}</h2>
+    <div class="alert alert-success">{{successMsg}}</div>
     {{/if}}
     {{#if errorMsg}}
-    <h2 class="alert alert-danger">{{errorMsg}}</h2>
+    <div class="alert alert-danger">{{errorMsg}}</div>
     {{/if}}
     <div class="row" style="display: flex; justify-content: center;">
         <ul class="col l8 collection character-collection">
