--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -2,7 +2,7 @@
 <main class="container wrapper">
     <header style="padding: 0.5rem;">
         <h1 style="display: flex; margin: 0rem; align-items: center; justify-content: center;">Guide <img
-                style="height: 4rem;" src="/assets/images/book.png" alt="book"></h1>
+                style="height: 4rem;" src="/assets/images/book-icon.png" alt="book"></h1>
     </header>
     <article>
         <h4>Welcome to <b>IntelliDnD</b>, an application that helps you manage your D&D character, accompanied by a <a
