--- a/views/partials/input.handlebars
+++ b/views/partials/input.handlebars
@@ -1,6 +1,6 @@
 <div class="col s8">
     <div class="input-field">
-        <button class="btn red lighten-1 del-btn" style="display: none;">Delete</button>
+        <button class="btn red lighten-1 del-btn">Delete</button>
         <input aria-label="name" type="text" maxlength="180" class="preloaded name" placeholder="{{name}}"
             value="{{name}}">
     </div>
