--- a/views/partials/input-nondynamic.handlebars
+++ b/views/partials/input-nondynamic.handlebars
@@ -1,6 +1,9 @@
 <div class="col s8">
     <div class="input-field">
-        <button class="btn red lighten-1 del-btn" style="display: none;">Delete</button>
+        <div class="prefixed-label">
+            <button class="btn-floating red lighten-1 waves-effect waves-light del-btn"><i
+                    class="material-icons">remove</i></button>
+        </div>
         <input aria-label="name" type="text" maxlength="90" class="name" placeholder="New..." value="">
     </div>
 </div>
