--- a/views/partials/input.handlebars
+++ b/views/partials/input.handlebars
@@ -1,6 +1,9 @@
 <div class="col s8">
     <div class="input-field">
-        <button class="btn red lighten-1 del-btn">Delete</button>
+        <div class="prefixed-label">
+            <button class="btn-floating red lighten-1 waves-effect waves-light del-btn"><i
+                    class="material-icons">remove</i></button>
+        </div>
         <input aria-label="name" type="text" maxlength="180" class="preloaded name" placeholder="{{name}}"
             value="{{name}}">
     </div>
