--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -60,8 +60,8 @@
         <p>Deletes your entire inventory and changelog.
             <em>Use with care.</em></p>
         <h3 id="-login">/login</h3>
-        <p>You can login/register to view and edit your inventory on the D&amp;D Inventory website: <a
-                href="https://dnd-inventory-bot.herokuapp.com">https://dnd-inventory-bot.herokuapp.com</a>.</p>
+        <p>This command will send you a link to create an account on this website, and a token to connect your character
+            on Discord to the <a href="https://www.intellidnd.com">website</a>.</p>
         <h3 id="money">Money</h3>
         <p>When dealing with money, there are 3 possible commands.</p>
         <blockquote>
