set up guide page

--- a/client/src/assets/scss/variables.scss
+++ b/client/src/assets/scss/variables.scss
@@ -1,4 +1,5 @@
-$fancy-font: 'Satisfy', sans-serif;
+$mobile: 900px;
+$fancy-font: 'Oxygen', sans-serif;
 $dark-transparent: #00000047;
 $gold: #ffcb51;
 $gray-dark: #00000047;
@@ -8,3 +9,4 @@ $purple-white: #d5c6e0;
 $purple-faded: #aaa1c8;
 $secondary: #192a51;
 $primary: #9b59b6;
+$test: #00000047;
