--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,16 @@
-@import "./assets/scss/variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+
+@import './assets/scss/variables.scss';
+
+@import './components/Nav/nav.scss';
+@import './components/Hero/hero.scss';
+@import './components/MiniComponents/mini_components.scss';
+
+@import './pages/Guide/guide.scss';
 
 :root {
     font-size: 20px;
+    --test: #00000047;
     --primary: #9b59b6;
     --secondary: #192a51;
     --purple-faded: #aaa1c8;
@@ -13,8 +22,8 @@
     --dark-transparent: #00000047;
     --boxshadow-ontop: 0 1rem 1.1rem -0.7rem var(--secondary);
     --boxshadow-onbottom: 0 -1rem 1.1rem -0.7rem var(--secondary);
-    overflow-x: hidden;
-    --fancy-font: 'Satisfy', sans-serif;
+    --fancy-font: 'Oxygen', sans-serif;
+    --mobile: 900px;
 }
 
 body {
@@ -24,16 +33,21 @@ body {
     background-color: var(--purple-light);
 }
 
-.wrapper {
-	background: var(--secondary);
-	opacity: 0.9;
-	padding: 1rem;
-	color: whitesmoke;
+a {
+    color: $primary;
+    &:hover, :visited {
+        color: darken($primary, 10);
+    }
 }
 
-a {
-	color: var(--secondary);
-	&:hover, :visited {
-		color: darken()
-	}
+code {
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+    font-size: 87.5%;
+    color: #e83e8c;
+}
+
+blockquote {
+    margin: 0;
+    padding-left: 1.5rem;
+    border-left: 5px solid #ee6e73;
 }
