--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,49 +5,55 @@
 @import './components/Nav/nav.scss';
 @import './components/Hero/hero.scss';
 @import './components/MiniComponents/mini_components.scss';
+@import './components/Footer/footer.scss';
+@import './components/Card/card.scss';
 
 @import './pages/Guide/guide.scss';
 
 :root {
-    font-size: 20px;
-    --test: #00000047;
-    --primary: #9b59b6;
-    --secondary: #192a51;
-    --purple-faded: #aaa1c8;
-    --purple-white: #d5c6e0;
-    --red-white: #f5e6e8;
-    --purple-light: #d9b9f5;
-    --gray-dark: #00000047;
-    --gold: #ffcb51;
-    --dark-transparent: #00000047;
-    --boxshadow-ontop: 0 1rem 1.1rem -0.7rem var(--secondary);
-    --boxshadow-onbottom: 0 -1rem 1.1rem -0.7rem var(--secondary);
-    --fancy-font: 'Oxygen', sans-serif;
-    --mobile: 900px;
+	font-size: 20px;
+	--test: #00000047;
+	--primary: #9b59b6;
+	--secondary: #192a51;
+	--purple-faded: #aaa1c8;
+	--purple-white: #d5c6e0;
+	--red-white: #f5e6e8;
+	--purple-light: #d9b9f5;
+	--gray-dark: #00000047;
+	--gold: #ffcb51;
+	--dark-transparent: #00000047;
+	--boxshadow-ontop: 0 1rem 1.1rem -0.7rem var(--secondary);
+	--boxshadow-onbottom: 0 -1rem 1.1rem -0.7rem var(--secondary);
+	--fancy-font: 'Oxygen', sans-serif;
+	--mobile: 900px;
 }
 
 body {
-    background-image: url('/assets/images/primary-logo-sm.png');
-    background-size: auto;
-    font-family: 'Roboto', sans-serif;
-    background-color: var(--purple-light);
+	background-image: url('/assets/images/primary-logo-sm.png');
+	background-size: 100%;
+	background-repeat: repeat-x;
+	background-blend-mode: soft-light;
+	font-family: 'Roboto', sans-serif;
+	background-color: var(--purple-light);
 }
 
 a {
-    color: $primary;
-    &:hover, :visited {
-        color: darken($primary, 10);
-    }
+	color: $primary;
+	&:hover,
+	:visited {
+		color: darken($primary, 10);
+	}
 }
 
 code {
-    font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
-    font-size: 87.5%;
-    color: #e83e8c;
+	font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+		'Courier New', monospace;
+	font-size: 87.5%;
+	color: #e83e8c;
 }
 
 blockquote {
-    margin: 0;
-    padding-left: 1.5rem;
-    border-left: 5px solid #ee6e73;
+	margin: 0;
+	padding-left: 1.5rem;
+	border-left: 5px solid #ee6e73;
 }
