large integrated change between client, server, and bot to better handle addition of discord-made character into user account

--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -1,5 +1,12 @@
 footer {
+	a {
+		text-decoration: none;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 	background: var(--secondary);
+	font-family: var(--fancy-font);
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
