--- a/client/src/components/Hero/hero.scss
+++ b/client/src/components/Hero/hero.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/variables.scss';
+
 .hero {
 	background: var(--primary);
 	opacity: 0.95;
@@ -5,6 +7,7 @@
 	z-index: 2;
 	text-align: center;
 	box-shadow: inset 0px 0px 17px 10px rgba(0, 0, 0, 0.316);
+	padding: 0.5rem;
 	h1 {
 		font-family: var(--fancy-font);
 		letter-spacing: 1rem;
@@ -13,5 +16,15 @@
 	p {
 		font-size: 2rem;
 		margin: 0;
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.hero {
+		h1 {
+			letter-spacing: unset;
+			width: 95vw;
+			font-size: 2rem !important;
+		}
 	}
 }
