--- a/client/src/components/MiniComponents/mini_components.scss
+++ b/client/src/components/MiniComponents/mini_components.scss
@@ -1,8 +1,63 @@
+@import '../../assets/scss/variables.scss';
+
 .wrapper {
-    background: var(--secondary);
-    border-radius: 0 0 5px 5px;
-    box-shadow: 0 10px 100px 15px var(--secondary);
-    opacity: 0.95;
-    padding: 1rem;
-    color: whitesmoke;
+	background: var(--secondary);
+	border-radius: 0 0 5px 5px;
+	// box-shadow: 0 10px 100px 15px var(--secondary);
+	opacity: 0.95;
+	padding: 1rem 3rem;
+	color: whitesmoke;
+	height: 100%;
+}
+
+.alert {
+	z-index: 500;
+	position: fixed;
+	background: rgb(255, 255, 255);
+	opacity: 0.91;
+	border-radius: 5px;
+	padding: 0.5rem 0.5rem 0.5rem 1rem;
+	text-align: center;
+	font-size: 1rem;
+	left: 50%;
+	top: 10%;
+	transform: translateX(-50%);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	&.success {
+		color: rgb(183, 223, 185);
+		background: rgb(7, 17, 7);
+	}
+	.x {
+		padding: 2px;
+		line-height: 1;
+		color: inherit;
+		margin-left: 1rem;
+		margin-right: 0.5rem;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 1rem;
+		font-weight: 800;
+		min-width: 1rem !important;
+		width: 1rem;
+		height: 1rem !important;
+		background: unset;
+		border: none;
+		transition: 250ms;
+		border-radius: 50%;
+		&:hover {
+			// border: 1px solid rgb(183, 223, 185);
+			box-shadow: 0 0 10px 5px rgb(74, 92, 75);
+			background: rgb(74, 92, 75);
+		}
+		cursor: pointer;
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.wrapper {
+		padding: 1rem;
+	}
 }
