--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -1,6 +1,10 @@
 .card {
+	border-radius: 4px;
+	min-width: 15rem;
+	padding: 0.5rem;
 	.title {
 		font-size: 1.6rem;
 		font-weight: 600;
 	}
+	background: var(--purple-light);
 }
