--- a/client/src/components/Hero/hero.scss
+++ b/client/src/components/Hero/hero.scss
@@ -8,14 +8,18 @@
 	text-align: center;
 	box-shadow: inset 0px 0px 17px 10px rgba(0, 0, 0, 0.316);
 	padding: 0.5rem;
+	color: darken($secondary, 5);
 	h1 {
 		font-family: var(--fancy-font);
+		font-weight: 800;
 		letter-spacing: 1rem;
 		text-transform: lowercase;
 	}
-	p {
+	h2 {
 		font-size: 2rem;
 		margin: 0;
+		line-height: 1;
+		font-weight: 200;
 	}
 }
 
@@ -25,6 +29,9 @@
 			letter-spacing: unset;
 			width: 95vw;
 			font-size: 2rem !important;
+		}
+		p {
+			font-size: 1rem;
 		}
 	}
 }
