--- a/client/src/components/MiniComponents/mini_components.scss
+++ b/client/src/components/MiniComponents/mini_components.scss
@@ -4,7 +4,7 @@
 	background: var(--secondary);
 	border-radius: 0 0 5px 5px;
 	// box-shadow: 0 10px 100px 15px var(--secondary);
-	opacity: 0.95;
+	opacity: 0.95 !important;
 	padding: 1rem 3rem;
 	color: whitesmoke;
 	height: 100%;
@@ -19,12 +19,12 @@
 	padding: 0.5rem 0.5rem 0.5rem 1rem;
 	text-align: center;
 	font-size: 1rem;
-	left: 50%;
-	top: 10%;
-	transform: translateX(-50%);
+	left: 2%;
+	bottom: 5%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	transition: 400ms;
 	&.success {
 		color: rgb(183, 223, 185);
 		background: rgb(7, 17, 7);
@@ -59,5 +59,6 @@
 @media screen and (max-width: $mobile) {
 	.wrapper {
 		padding: 1rem;
+		opacity: 0.7 !important;
 	}
 }
