--- a/client/src/pages/Guide/guide.scss
+++ b/client/src/pages/Guide/guide.scss
@@ -1,17 +1,16 @@
 .guide {
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    // line-height: 1;
-    code {
-        font-weight: bold;
-    }
-    h2 {
-        margin: 0 0 1rem 0;
-        font-size: 2rem;
-        font-weight: 400;
-        border-bottom: 1px solid white;
-    }
-    p {
-        margin: 0 0 1rem 0;
-    }
+	font-size: 1rem;
+	margin-bottom: 1rem;
+	code {
+		font-weight: bold;
+	}
+	h3 {
+		margin: 0 0 0.5rem 0;
+		font-size: 2.5rem;
+		font-weight: 500;
+		border-bottom: 1px solid var(--purple-light);
+	}
+	p {
+		margin: 0 0 1rem 0;
+	}
 }
