--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -36,7 +36,7 @@ body {
 	background-size: 100vw;
 	background-blend-mode: soft-light;
 	font-family: 'Roboto', sans-serif;
-	background-color: var(--purple-light);
+	background-color: var(--secondary);
 	// overflow-y: auto;
 }
 
