--- a/client/src/components/Card/card.scss
+++ b/client/src/components/Card/card.scss
@@ -1,10 +1,33 @@
+@import '../../assets/scss/variables.scss';
+
 .card {
-	border-radius: 4px;
 	min-width: 15rem;
-	padding: 0.5rem;
+	// padding: 0.5rem;
+	border-radius: 4px;
 	.title {
+		padding: 0.5rem;
 		font-size: 1.6rem;
 		font-weight: 600;
+		background: var(--purple-light);
+		img {
+			max-height: 1rem;
+		}
 	}
-	background: var(--purple-light);
+	.inputs {
+		padding: 0.5rem;
+		width: 100%;
+		max-height: 400px;
+		overflow-y: auto;
+		scrollbar-color: var(--primary) var(--secondary);
+		scrollbar-width: thin;
+		&::-webkit-scrollbar-track {
+			background: var(--primary) var(--secondary);
+		}
+		input,
+		label {
+			color: white !important;
+		}
+	}
+	border: 1px solid var(--purple-light);
+	// background: var(--secondary);
 }
