--- a/client/src/components/MiniComponents/mini_components.scss
+++ b/client/src/components/MiniComponents/mini_components.scss
@@ -10,12 +10,31 @@
 	height: 100%;
 }
 
+%x {
+	padding: 2px;
+	line-height: 1;
+	color: inherit;
+	margin-left: 1rem;
+	margin-right: 0.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 1rem;
+	font-weight: 800;
+	min-width: 1rem !important;
+	width: 1rem;
+	height: 1rem !important;
+	border: none;
+	transition: 250ms;
+	border-radius: 50%;
+}
+
 .alert {
 	z-index: 500;
 	position: fixed;
 	background: rgb(255, 255, 255);
-	opacity: 0.91;
-	border-radius: 5px;
+	opacity: 0.95;
+	border-radius: 4px;
 	padding: 0.5rem 0.5rem 0.5rem 1rem;
 	text-align: center;
 	font-size: 1rem;
@@ -28,31 +47,24 @@
 	&.success {
 		color: rgb(183, 223, 185);
 		background: rgb(7, 17, 7);
-	}
-	.x {
-		padding: 2px;
-		line-height: 1;
-		color: inherit;
-		margin-left: 1rem;
-		margin-right: 0.5rem;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		font-size: 1rem;
-		font-weight: 800;
-		min-width: 1rem !important;
-		width: 1rem;
-		height: 1rem !important;
-		background: unset;
-		border: none;
-		transition: 250ms;
-		border-radius: 50%;
-		&:hover {
-			// border: 1px solid rgb(183, 223, 185);
-			box-shadow: 0 0 10px 5px rgb(74, 92, 75);
-			background: rgb(74, 92, 75);
+		.x {
+			@extend %x;
+			&:hover {
+				// border: 1px solid rgb(183, 223, 185);
+				box-shadow: 0 0 10px 5px rgb(74, 92, 75);
+			}
 		}
-		cursor: pointer;
+	}
+	&.error {
+		color: rgb(218, 116, 116);
+		background: rgb(31, 9, 9);
+		.x {
+			@extend %x;
+			&:hover {
+				// border: 1px solid rgb(183, 223, 185);
+				box-shadow: 0 0 10px 5px rgb(92, 74, 74);
+			}
+		}
 	}
 }
 
